<?xml version="1.0"?>
<package format="2">
  <name>camera_utils</name>
  <version>0.0.0</version>
  <description>The camera_utils package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rollo.f96@gmail.com">Federico Rollo</maintainer>
  <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>
  <maintainer email="andrea.zunino89@gmail.com">Andrea Zunino</maintainer>
  
  <author>Federico Rollo</author>
  <author>Gennaro Raiola</author>
  <author>Andrea Zunino</author>

  <license>GNU General Public License v3.0</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/camera_utils</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>rospy</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
